    + [RA] Fix option parsing bug leading lintian to incorrectly reject -a
      or -p without a package.

  * lib/Dep.pm:
    + [RA] Skip empty dependencies, avoiding false positives for
      stronger-dependency-implies-weaker.  Patch from Adam D. Barratt.
      (Closes: #469222)
  * lib/Lintian/Data.pm:
    + [RA] New module for loading and querying lists of keywords.
  * lib/Spelling.pm:
    + [RA] Add another spelling correction.
    + [RA] Merriam-Webster and the OED have both given up on publically
      vs. publicly, so we should as well.  (Closes: #466617)

  * reporting/html_reports:
    + [RA] Load the correct configuration file.
  * reporting/templates:
    + [TK] Correct Lintian maintainers address in page footers.

  * unpack/unpack-srcpkg-l2:
    + [RA] Don't rely on the output format of dpkg-source to learn the
      source directory and create a symlink.  Instead, tell dpkg-source to
      unpack the source directly into the unpacked directory.  Discard
      output of dpkg-source to allow for the current version, which prints
      things even with -q (fixed in later versions).  Thanks, Raphael
      Hertzog.  (Closes: #468927)

 -- Thijs Kinkhorst <thijs@debian.org>  Tue, 19 Feb 2008 11:31:41 +0100

lintian (1.23.45) unstable; urgency=low

  The "100 open bugs is magical" release.

  * checks/debconf:
    + [RA] Recognize require as well as use when loading debconf modules
      in Perl.  Thanks, Manoj Srivastava.  (Closes: #464775)
  * checks/fields:
    + [RA] Fix coding error that didn't allow python-all-dev to satisfy a
      Python build dependency.  Thanks, Joerg Jaspert.  (Closes: #464709)
  * checks/manpages:
    + [RA] Ignore another undefined macro generated by pod2man (will be
      fixed with the Pod::Man in Perl 5.10).
  * checks/po-debconf:
    + [RA] Also accept nnn_NN names for po files.  nds_DE and nds_NL are
      valid locales.  Thanks, Christian Perrier.
  * checks/scripts{.desc,}: